--- a/adr-schema-gen/index.html
+++ b/adr-schema-gen/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>ADR Schema Generator</title>
+  <title>Azure IoT Operations Schema Generator</title>
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <!-- Custom CSS -->
@@ -16,7 +16,7 @@
 </head>
 <body>
   <div class="container my-5">
-    <h1 class="text-center mb-4">ADR Schema Generator</h1>
+    <h1 class="text-center mb-4">Azure IoT Operations Schema Generator</h1>
     <p class="text-center">
       Paste your JSON payload below. The generator supports all valid data types,
       including complex types like arrays, maps, structs, dates, timestamps, decimals, and binary data.
