--- a/adr-schema-gen/index.html
+++ b/adr-schema-gen/index.html
@@ -23,7 +23,7 @@
     </p>
     <!-- Disclaimer -->
     <div class="alert alert-warning text-center" role="alert">
-      <strong>Disclaimer:</strong> This is a helper tool only and not an official product with support.
+      <strong>Disclaimer:</strong> This is an AI-generated helper tool only and not an official product with support.
       Please check the output carefully as it may contain mistakes.
     </div>
     <!-- Schema Type Selection -->
