--- a/adr-schema-gen/index.html
+++ b/adr-schema-gen/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Azure IoT Operations Schema Generator</title>
+  <title>Schema Gen Helper</title>
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <!-- Custom CSS -->
@@ -16,15 +16,15 @@
 </head>
 <body>
   <div class="container my-5">
-    <h1 class="text-center mb-4">Azure IoT Operations Schema Generator</h1>
+    <h1 class="text-center mb-4">Schema Gen Helper</h1>
     <p class="text-center">
       Paste your JSON payload below. The generator supports all valid data types,
       including complex types like arrays, maps, structs, dates, timestamps, decimals, and binary data.
     </p>
     <!-- Disclaimer -->
     <div class="alert alert-warning text-center" role="alert">
-      <strong>Disclaimer:</strong> This is an AI-generated helper tool only and not an official product with support.
-      Please check the output carefully as it may contain mistakes.
+      <strong>Note:</strong> This is an AI-generated helper tool intended for convenience only. 
+      Verify the output carefully, as it may contain mistakes. This tool comes with no official support.
     </div>
     <!-- Schema Type Selection -->
     <div class="mb-4">
